# opime-notify2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/opime_notify2/: main.py
